<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12"
    android:background="@color/white"
    tools:context=".register.Register"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="8">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.3"
            android:background="@drawable/border_screen"
            android:orientation="vertical"
           >

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/id12">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/school" />
            </LinearLayout>

            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/textview3"
                android:layout_below="@+id/id12"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textview3"
                android:layout_above="@id/id14"
                android:id="@+id/id13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="12">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="10dp"
                        app:hintTextColor="@color/black"
                        android:id="@+id/name_surname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/input_bg"
                        android:hint="@string/name_surname"
                        android:paddingLeft="30dp"
                        android:textSize="12dp" />

                </LinearLayout>


                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.2">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/input_bg"
                            android:hint="@string/mail"
                            android:paddingLeft="30dp"

                            android:textSize="12dp" />

                </LinearLayout>


                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/input_bg"
                            android:hint="@string/date"
                            android:paddingLeft="30dp"

                            android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.2">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/password1"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/input_bg"
                            android:hint="@string/password"
                            android:paddingLeft="30dp"
                            android:inputType="textPassword"
                            android:textSize="12dp" />

                </LinearLayout>


                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.2">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginRight="10dp"
                            android:id="@+id/password2"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/input_bg"
                            android:hint="@string/password2"
                            android:paddingLeft="30dp"
                            android:inputType="textPassword"
                            android:textSize="12dp" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp">

                    <CheckBox
                        android:id="@+id/checkbox_meat"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:button="@drawable/checkbox_control"
                        android:paddingLeft="8dp"
                        android:text="@string/message"
                        android:textSize="8dp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/id14"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/register"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1.8"
                        android:background="@drawable/button_control"
                        android:text="@string/btn_register"
                        android:textColor="@color/white"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/member"
                        android:textColor="@color/black"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/btn_login"
                        android:textColor="@color/btn_bg"
                        android:textSize="10dp" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>