<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login"
    android:weightSum="12"
    android:background="@color/white"
    android:orientation="vertical"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.3"
            android:background="@drawable/border_screen"
            android:weightSum="10"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/school"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:weightSum="10"
                android:gravity="center"
                >


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/email_icon"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/input_bg"


                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:textSize="14dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    app:startIconDrawable="@drawable/lock_icon"
                    app:hintTextColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:endIconMode="password_toggle"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:background="@drawable/input_bg"
                        android:textSize="14dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:paddingLeft="8dp">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/Remember"
                        android:textSize="9dp"
                        android:paddingLeft="8dp"
                        android:button="@drawable/checkbox_control"

                        />
                </LinearLayout>
            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="3dp">

                    <Button

                        android:id="@+id/btn_login"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.8"
                        android:text="@string/btn_login"
                        android:textSize="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/button_control"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="4.6"
                    android:orientation="vertical"

                    >

                    <TextView

                        android:layout_marginTop="10dp"
                        android:id="@+id/password_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="@string/forget_password"
                        android:textColor="@color/btn_bg"
                        android:textSize="10dp"
                        />


                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_account"
                            android:textColor="@color/black"
                            android:textSize="10dp"
                            />
                        <TextView
                            android:id="@+id/register"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="20dp"
                            android:text="@string/btn_register"
                            android:textColor="@color/btn_bg"
                            android:textSize="10dp"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>