<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password.PasswordMail"
    android:weightSum="12"
    android:background="@color/white"
    android:orientation="vertical"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.3"
            android:background="@drawable/border_screen"
            android:weightSum="10"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/school"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:text="@string/password_forget"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/black"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:weightSum="10"

                >

                <TextView

                    android:gravity="center"
                    android:id="@+id/password_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5"
                    android:text="@string/password_mail"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:padding="3dp"
                    />


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="0dp"
                    android:layout_weight="3.5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/email_icon"
                    app:startIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mail_password"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/input_bg"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="center"
                        android:textSize="14dp"

                        />

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="3dp"
                    >

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.8"
                        android:text="@string/send"
                        android:textSize="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/button_control"
                        android:layout_gravity="center"/>
                </LinearLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:weightSum="4">












            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>